--- a/index.html
+++ b/index.html
@@ -2917,7 +2917,7 @@
                     <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
 
                         <div class="url-body default">
-                            <a href="sehuatang.net" target="_blank" data-id="522" data-url="sehuatang.net"
+                            <a href="https://sehuatang.net" target="_blank" data-id="522" data-url="https://sehuatang.net"
                                 class="card no-c  mb-4 site-522" data-toggle="tooltip" data-placement="bottom"
                                 title="免费logo在线制作平台">
                                 <div class="card-body">
@@ -2936,7 +2936,7 @@
                                     </div>  
                                 </div>
                             </a>
-                            <a href="sehuatang.net" class="togo text-center text-muted is-views" data-id="522"
+                            <a href="https://sehuatang.net" class="togo text-center text-muted is-views" data-id="522"
                                 data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
                                     class="iconfont icon-goto"></i></a>
                         </div>
