--- a/index.html
+++ b/index.html
@@ -2131,6 +2131,33 @@
                                     class="iconfont icon-goto"></i></a>
                         </div>
                     </div>
+                    <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a   ">
+
+                        <div class="url-body default">
+                            <a href="https://www.manhuadb.com/" target="_blank" data-id="343"
+                                data-url="https://www.manhuadb.com/" class="card no-c  mb-4 site-343"
+                                data-toggle="tooltip" data-placement="bottom" title="日本漫画 漫画大全 看漫画 在线漫画-漫画DB">
+                                <div class="card-body">
+                                    <div class="url-content d-flex align-items-center">
+                                        <div
+                                            class="url-img rounded-circle mr-2 d-flex align-items-center justify-content-center">
+                                            <img class="lazy" src="ico/67tool.png" data-src="ico/67tool.png"
+                                                onerror="javascript:this.src='ico/67tool.png'" alt="漫画DB">
+                                        </div>
+                                        <div class="url-info flex-fill">
+                                            <div class="text-sm overflowClip_1">
+                                                <strong>漫画DB</strong>
+                                            </div>
+                                            <p class="overflowClip_1 m-0 text-muted text-xs">日本漫画 漫画大全 看漫画 在线漫画-漫画DB</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="https://www.manhuadb.com/" class="togo text-center text-muted is-views"
+                                data-id="343" data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow"><i
+                                    class="iconfont icon-goto"></i></a>
+                        </div>
+                    </div>
                 </div>
 
 
